third_party/rust/cxx/v1/crate/tests/ui/empty_struct.stderr
error: structs without any fields are not supported
 --> tests/ui/empty_struct.rs:3:5
  |
3 |     struct Empty {}
  |     ^^^^^^^^^^^^^^^
